--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+db/data/
+ 
+**/node_modules
+ 
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+ 
 ### STS ###
 .apt_generated
 .classpath
@@ -16,7 +20,7 @@ build/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
-
+ 
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -25,13 +29,13 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+ 
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-
+ 
 ### VS Code ###
 .vscode/
